added calendar selector and update the main calendar where it was selected. Changed package from orchid to arkvis.orchid

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/PeriodCalendarFragmentView">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.orchid.FirstFragment"
+        android:id="@+id/PeriodCalendarFragmentView"
+        android:name="com.arkvis.orchid.pcalender.view.PeriodCalendarFragmentView"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/period_calendar_fragment">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
+            android:id="@+id/action_PeriodCalendarFragmentView_to_SecondFragment"
             app:destination="@id/SecondFragment" />
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.orchid.SecondFragment"
+        android:name="com.arkvis.orchid.SecondFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_SecondFragment_to_PeriodCalendarFragmentView"
+            app:destination="@id/PeriodCalendarFragmentView" />
     </fragment>
 </navigation>
