--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,7 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="space_xl">24dp</dimen>
+    <dimen name="space_lg">20dp</dimen>
+    <dimen name="space_md">16dp</dimen>
+    <dimen name="space_sm">12dp</dimen>
+    <dimen name="space_xs">8dp</dimen>
 </resources>
