--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,10 @@
     <style name="Theme.Orchid.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Orchid.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="CalendarStartControl">
+        <item name="android:padding">@dimen/space_md</item>
+    </style>
+    <style name="CalendarEndControl">
+        <item name="android:padding">@dimen/space_md</item>
+    </style>
 </resources>
