--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,6 +24,7 @@
     <style name="Theme.Orchid.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="CalendarStartControl">
         <item name="android:padding">@dimen/space_md</item>
+        <item name="android:textStyle">bold</item>
     </style>
     <style name="CalendarEndControl">
         <item name="android:padding">@dimen/space_md</item>
