--- a/app/src/main/res/layout/period_calendar_activity.xml
+++ b/app/src/main/res/layout/period_calendar_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".pcalender.view.PeriodCalendarView">
+    tools:context="com.arkvis.orchid.pcalender.view.PeriodCalendarView">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -17,19 +17,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/Theme.Orchid.PopupOverlay" />
-
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_main" />
-
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/fab"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="bottom|end"-->
-<!--        android:layout_marginEnd="@dimen/space_md"-->
-<!--        android:layout_marginBottom="@dimen/space_md"-->
-<!--        app:srcCompat="@android:drawable/ic_dialog_email"-->
-<!--        android:contentDescription="@string/fab" />-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
