--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="space_md">16dp</dimen>
     <dimen name="space_sm">12dp</dimen>
     <dimen name="space_xs">8dp</dimen>
+
+    <dimen name="border_xs">1dp</dimen>
 </resources>
