Updated Fab to be more seemless and appropriate by swapping between delete and save and to have a base state +

--- a/app/src/main/res/layout/period_calendar_fragment.xml
+++ b/app/src/main/res/layout/period_calendar_fragment.xml
@@ -221,7 +221,7 @@
         android:layout_marginEnd="@dimen/space_xs"
         android:layout_marginBottom="@dimen/space_xs"
         android:contentDescription="@string/fab"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/grey"
         app:backgroundTint="@color/black"
         app:borderWidth="@dimen/border_xs"
         app:layout_constraintBottom_toBottomOf="parent"
