--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="red">#FF0000</color>#00FF00
     <color name="green">#228B22</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFFFF</color>#AEAEAE
+    <color name="grey">#AEAEAE</color>
 </resources>
